Commit landing-page All

--- a/index.html
+++ b/index.html
@@ -1,12 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <title>Landing-Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing-Page</title>
     <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <h1>Landing-Page index.html </h1>
-</body>
+  </head>
+  <body>
+  
+    <div class="sec-one">
+       <div class="head">
+          <div class="head-logo">
+            <img src="./images/header-logo.png" alt="Alt Header Logo">
+          </div>
+          <div class="head-link">
+            <a href="./index.html">header-link-one</a>
+            <a href="./index.html">header-link-two</a>
+            <a href="./index.html">header-link-three</a>
+          </div>
+      </div>
+      <div class="hero">
+        <div class="hero-text">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <button class="button1"><a href="./index.html">Sign up</a></button>
+        </div>
+        <div class="hero-img">
+          <img src="./images/placeholder.jpg" alt="Alt Placeholder">
+        </div>
+      </div>
+    </div>
+      
+    <div class="sec-two">
+      <div class="info-two">
+        <div class="text-two">Some random information.</div>
+      </div>
+      <div class="grid-two">
+        <div>
+          <img src="./images/img1.jpg" alt="Image one">
+          <p class="p1">this is some subtext</p>
+          <p class="p2">under an illustration</p>
+          <p class="p3">or image</p>
+        </div>  
+        <div>
+          <img src="./images/img2.jpg" alt="Image two">
+          <p class="p1">this is some subtext</p>
+          <p class="p2">under an illustration</p>
+          <p class="p3">or image</p>
+        </div>
+        <div>
+          <img src="./images/img3.jpg" alt="Image three">
+          <p class="p1">this is some subtext</p>
+          <p class="p2">under an illustration</p>
+          <p class="p3">or image</p>
+        </div>
+        <div>
+          <img src="./images/img4.jpg" alt="Image four">
+          <p class="p1">this is some subtext</p>
+          <p class="p2">under an illustration</p>
+          <p class="p3">or image</p>
+        </div>
+      </div>
+    </div>
+ 
+     <div class="sec-three">
+       <div class="quote">
+         <p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</P>
+       </div>
+       <div class="author">
+         <p>-Thor, God of Thunder</p>
+       </div>
+    </div>
+
+    <div class="sec-four">
+      <div class="cont1-four">
+        <div class="cont2-four">
+          <div class="text-four">
+            <p class="p4">Call to action! It's time!</p>
+            <p class="p5">Sign up for our product by clicking thst button right over there!</p>
+          </div>
+          <div class="button-four">
+            <button class="button2"><a href="./index.html">Sign up</a></button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+     <div class="footer">
+       <div class="foot-text">
+         <P class="p6">Copyright © The Odin Project 2021</p>
+       </div>
+    </div>
+
+  </body>
 </html>
