--- a/index.html
+++ b/index.html
@@ -9,56 +9,64 @@
   <body>
   
     <div class="sec-one">
-       <div class="head">
-          <div class="head-logo">
-            <img src="./images/header-logo.png" alt="Alt Header Logo">
+      <div class="container-one">
+        <div class="grid-img">
+          <div>
+            <img src="./images/header-logo.png" alt="Image one">
           </div>
-          <div class="head-link">
-            <a href="./index.html">header-link-one</a>
-            <a href="./index.html">header-link-two</a>
-            <a href="./index.html">header-link-three</a>
+        </div>
+        <div class="grid-link">
+          <div>
+            <a href="./header_1.html">header link one</a>
           </div>
+          <div>
+            <a href="./header_2.html">header link two</a>
+          </div>
+          <div>
+            <a href="./header_3.html">header link three</a>
+          </div>
+        </div>
       </div>
       <div class="hero">
         <div class="hero-text">
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-          <button class="button1"><a href="./index.html">Sign up</a></button>
+          <button class="button"><a href="./Sign_Up.html">Sign up</a></button>
         </div>
         <div class="hero-img">
           <img src="./images/placeholder.jpg" alt="Alt Placeholder">
         </div>
       </div>
     </div>
-      
+
     <div class="sec-two">
       <div class="info-two">
         <div class="text-two">Some random information.</div>
       </div>
-      <div class="grid-two">
+      <div class="container-two">
         <div>
           <img src="./images/img1.jpg" alt="Image one">
           <p class="p1">this is some subtext</p>
-          <p class="p2">under an illustration</p>
-          <p class="p3">or image</p>
+          <p class="p1">under an illustration</p>
+          <p class="p2">or image</p>
         </div>  
         <div>
           <img src="./images/img2.jpg" alt="Image two">
           <p class="p1">this is some subtext</p>
-          <p class="p2">under an illustration</p>
-          <p class="p3">or image</p>
+          <p class="p1">under an illustration</p>
+          <p class="p2">or image</p>
         </div>
         <div>
           <img src="./images/img3.jpg" alt="Image three">
           <p class="p1">this is some subtext</p>
-          <p class="p2">under an illustration</p>
-          <p class="p3">or image</p>
+          <p class="p1">under an illustration</p>
+          <p class="p2">or image</p>
         </div>
         <div>
           <img src="./images/img4.jpg" alt="Image four">
           <p class="p1">this is some subtext</p>
-          <p class="p2">under an illustration</p>
-          <p class="p3">or image</p>
+          <p class="p1">under an illustration</p>
+          <p class="p2">or image</p>
         </div>
       </div>
     </div>
@@ -73,24 +81,18 @@
     </div>
 
     <div class="sec-four">
-      <div class="cont1-four">
-        <div class="cont2-four">
-          <div class="text-four">
-            <p class="p4">Call to action! It's time!</p>
-            <p class="p5">Sign up for our product by clicking thst button right over there!</p>
-          </div>
-          <div class="button-four">
-            <button class="button2"><a href="./index.html">Sign up</a></button>
-          </div>
+      <div class="container-four">
+        <div>
+          <p class="p1">Call to action! It's time!</p>
+          <p class="p2">Sign up for our product by clicking thst button right over there!</p>
+        </div>
+        <div>
+          <button class="button"><a href="./Sign_Up.html">Sign up</a></button>
         </div>
       </div>
     </div>
 
-     <div class="footer">
-       <div class="foot-text">
-         <P class="p6">Copyright © The Odin Project 2021</p>
-       </div>
-    </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 
   </body>
 </html>
